defined the view function of the register and the url pattern

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registration Form</title>
+  <script src="{% static 'js/register.js' %}"></script>
   <link rel="stylesheet" type="text/css" href="{% static 'css/register.css' %}">
 </head>
 <body>
