styling for a more apealing register form

--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Register</h2>
+    <h2>Register For an account</h2>
     <form id="registerForm" onsubmit="return validateForm()">
       <div class="form-group">
         <label for="username">Username:</label>
@@ -31,7 +31,5 @@
       <button type="submit">Register</button>
     </form>
   </div>
-  
-  <script src="script.js"></script>
 </body>
 </html>
