--- a/static/css/register.css
+++ b/static/css/register.css
@@ -15,9 +15,13 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
-  h2 {
-    text-align: center;
-  }
+    h2 {
+        text-align: center;
+        color: #333; /* Text color */
+        font-size: 28px;
+        margin-bottom: 30px;
+        letter-spacing: 2px; /* Add spacing between letters */
+      }
   
   .form-group {
     margin-bottom: 20px;
@@ -28,26 +32,42 @@ body {
     margin-bottom: 5px;
   }
   
-  input[type="text"],
-  input[type="email"],
-  input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
   
   button {
-    width: 100%;
+    width: 50%;
     padding: 10px;
     background-color: #007bff;
     color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 30px;
     cursor: pointer;
+    margin: 0 auto;
+    display: block; 
+    
   }
   
   button:hover {
     background-color: #0056b3;
+  }
+  /* making the input fields circular*/
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 20px; /* Adjust the value to increase or decrease the roundness */
+}
+
+/* making the container of the registration form circular */
+.container {
+    width: 30%;
+    max-width: 500px;
+    margin: 50px auto;
+    padding: 50px;
+    background-color: #fff;
+    border-radius: 50px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
