--- a/static/css/register.css
+++ b/static/css/register.css
@@ -5,15 +5,7 @@ body {
     background-color: #f2f2f2;
   }
   
-  .container {
-    width: 80%;
-    max-width: 600px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
+
   
     h2 {
         text-align: center;
@@ -66,7 +58,7 @@ input[type="password"] {
     max-width: 500px;
     margin: 50px auto;
     padding: 50px;
-    background-color: #fff;
+    background-color: hwb(0 94% 3%);
     border-radius: 50px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
