--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MentorMate</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/homepage.css' %}">
+  <script src="{% static 'js/homepage.js' %}"></script>
 </head>
 <body>
   <header>
