more styling of the profile section

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
           <li><a href="#" class="active">Home</a></li>
           <li><a href="#">Search</a></li>
           <li><a href="#">Chats</a></li>
-          <li><a href="#">Profile</a></li>
+          <li><a href="{% url 'authentication:profile' %}">Profile</a></li>
         </ul>
       </nav>
     </div>
