--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,29 +1,44 @@
 /* profile.css */
 
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+}
+
 .profile-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    max-width: 800px;
+    margin: 50px auto;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
 }
 
 .profile-picture img {
-    width: 200px; /* Adjust size as needed */
-    height: auto;
-    border-radius: 50%; /* Make the image round */
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
     margin-bottom: 20px;
-}
-
-.profile-details {
-    text-align: left;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .profile-details h1 {
     font-size: 24px;
-    margin-bottom: 10px;
+    color: #333;
+    margin-bottom: 20px;
 }
 
 .profile-details p {
-    margin: 5px 0;
+    font-size: 16px;
+    color: #666;
+    margin-bottom: 10px;
+}
+
+.profile-details strong {
+    font-weight: bold;
+    color: #000;
 }
