--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -1,3 +1,4 @@
+{% load static%}
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,7 +7,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/editprofile.css' %}">
     </head>
     <body>
         <h1>Edit Profile</h1>
