getting the profiles of the currently logged in user

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,10 +11,10 @@
 <body>
     <div class="profile-container">
         <div class="profile-picture">
-            <img src="{{ profile.profile_picture.url }}" alt="Profile Picture">
+            <img src="{{ profiles.profile_picture.url }}" alt="Profile Picture">
         </div>
         <div class="profile-details">
-            <h1>{{ profile.full_name }}</h1>
+            <h1>{{ profiles.full_name }}</h1>
             <p><strong>Education:</strong> {{ profile.education }}</p>
             <p><strong>Skills:</strong> {{ profile.skills }}</p>
             <p><strong>Years of Experience:</strong> {{ profile.years_of_experience }}</p>
