--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -2,15 +2,20 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
     margin: 0;
     padding: 0;
+    background-image: url('/static/images/background.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
+
+
 
 .profile-container {
     max-width: 800px;
     margin: 50px auto;
-    background-color: #fff;
+    background-color: #007bff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -28,13 +33,13 @@ body {
 
 .profile-details h1 {
     font-size: 24px;
-    color: #333;
+    color: white;
     margin-bottom: 20px;
 }
 
 .profile-details p {
     font-size: 16px;
-    color: #666;
+    color: #ffcc00;
     margin-bottom: 10px;
 }
 
