adding the footer on the homepage

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,13 +1,12 @@
-/* profile.css */
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('/static/images/background.jpeg');
+    /*background-image: url('/static/images/background.jpeg');*/
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    background-color: whitesmoke;
 }
 
 
@@ -15,7 +14,7 @@ body {
 .profile-container {
     max-width: 800px;
     margin: 50px auto;
-    background-color: #007bff;
+    background-color: white;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -33,8 +32,9 @@ body {
 
 .profile-details h1 {
     font-size: 24px;
-    color: white;
+    color: black;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .profile-details p {
