--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 header {
   background-color: #007bff;
   color: #fff;
@@ -67,3 +65,29 @@ nav ul li a.active {
 .profile-link:hover {
   color: #ffcc00;
 }
+footer {
+  background-color: #007bff; 
+  color: white; 
+  padding: 20px 0; 
+}
+
+.contain {
+  display: flex;
+  justify-content: space-around;
+
+}
+
+.footer-info {
+  width: 30%; 
+}
+
+.footer-info h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.footer-info p {
+  font-size: 14px;
+  margin: 5px 0;
+}
+
