--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,4 +23,26 @@
     </div>
   </header>
 </body>
+<footer>
+  <div class="contain">
+    <div class="footer-info">
+      <h3>Contact Us</h3>
+      <p>Email: info@mentormate.com</p>
+      <p>Phone: +254115735292</p>
+    </div>
+    <div class="footer-info">
+      <h3>Visit Us</h3>
+      <p>123 Main Street</p>
+      <p>Nairobi, Kenya</p>
+    </div>
+    <div class="footer-info">
+      <h3>Follow Us</h3>
+      <p>X: @MentorMate</p>
+      <p>LinkedIn: /MentorMate</p>
+      <p>Facebook: /MentorMate</p>
+      <p>Instagram: /MentorMate</p>
+    </div>
+  </div>
+</footer>
+
 </html>
