--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -11,6 +11,11 @@ header {
   justify-content: space-between;
   align-items: center;
 }
+.container h1{
+font-size: 40px;
+margin: 0;
+font-weight: bold;
+}
 
 .left-section {
   display: flex;
@@ -21,11 +26,6 @@ header {
   margin-left: auto;
 }
 
-h1 {
-  margin: 0;
-  font-size: 24px;
-  font-weight: bold;
-}
 
 nav ul {
   list-style-type: none;
@@ -79,15 +79,82 @@ footer {
 
 .footer-info {
   width: 30%; 
+  font-weight: bold;
 }
 
 .footer-info h3 {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 10px;
+  color: black;
 }
-
 .footer-info p {
-  font-size: 14px;
+  font-size: 18px;
   margin: 5px 0;
 }
 
+.footer-info li{
+  list-style-type: none;
+}
+.footer-info li a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  transition: color 0.3s ease;
+  margin: 5px 0;
+  list-style-type: none;
+}
+.footer-info li a:hover{
+  color: #ffcc00;
+
+}
+.imagesection{
+  background-image: url('/static/images/im.jpg');
+  background-repeat: no-repeat;
+  background-size: cover; 
+  color: white; 
+  padding: 50px; /* Adds padding around the text to ensure readability */
+  text-align: center;
+ 
+}
+
+.imagesection .text {
+  padding: 20px; /* Add some padding around the text */
+}
+
+.welcome-message {
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background for better readability */
+  padding: 20px; /* Padding around the welcome message */
+
+}
+
+.text{
+  color: #fff;
+}
+
+.text #greeting {
+  font-size: 24px; 
+  text-align: center;
+}
+
+.text #username {
+  font-weight: bold; /* Make the username bold */
+}
+.working {
+  background-color: #f0f0f0; /* Background color for the div */
+  padding: 20px; /* Add padding around the content */
+  margin-bottom: 20px; /* Add space between this div and the next element */
+  border-radius: 10px; /* Add rounded corners */
+}
+
+.working h1 {
+  text-align: center;
+  color: #333; /* Text color for the main heading */
+  font-size: 24px; /* Font size for the main heading */
+  margin-bottom: 10px; /* Add space below the main heading */
+}
+
+.working h3 {
+  color: #666; 
+  font-size: 18px;
+  margin-bottom: 10px; /* Add space below each subheading */
+}
