--- a/templates/register.html
+++ b/templates/register.html
@@ -46,6 +46,7 @@
         <input type="password" id="confirmPassword" name="confirmPassword" required>
       </div>
       <button type="submit">Register</button>
+      <p>Already have an account?<a href="{% url 'authentication:login' %}">Login</a></p>
     </form>
   </div>
 </body>
