--- a/static/css/register.css
+++ b/static/css/register.css
@@ -2,7 +2,9 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f2f2f2;
+    background-image: url('/static/images/nnn.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;     
   }
   
 
